--- a/src/pug/components/map/map.pug
+++ b/src/pug/components/map/map.pug
@@ -15,7 +15,7 @@
 .map
   #map
   .map__title Розташування
-  .map__legend(data-mob-accordeon)
+  .opened.map__legend(data-mob-accordeon)
     .map__legend-title Умовні позначення
     .map__legend-markers-wrap
       each val,i in markers
