--- a/src/assets/styles/pages/values.scss
+++ b/src/assets/styles/pages/values.scss
@@ -7,6 +7,7 @@ body[id*='values']{
 
 .values-slider {
   --js-transition:1.5s;
+  --slides-count:4;
   display: flex;
   // position: absolute;
   left: 0;
@@ -17,7 +18,7 @@ body[id*='values']{
   width: 100vw;
   height: calc(100vh - var(--header-h));
   .slide.active {
-    width: 100% ;
+    width: calc(100% - (60px * (var(--slides-count) - 1)));
     pointer-events: none;
   }
   .slide:after {
@@ -91,13 +92,13 @@ body[id*='values']{
     line-height: 80px;
     font-weight: normal;
   }
-  @include to(575px){
+  @include to(768px){
     flex-wrap: wrap;
     margin-top: 0;
     height: auto;
     .slide {
       width: 100%;
-      height: 35px;
+      height: 60px;
       align-items: flex-start;
     }
     .slide img {
@@ -112,15 +113,8 @@ body[id*='values']{
     .slide__content {
       padding-left: 14px;
     }
-    &__number {
-      font-size: 24px;
-    line-height: 100%;
-    z-index: 1;
-    }
-    .active &__number {
-      font-size: 48px;
-      line-height: 100%;
-    }
+    
+    
     .info-list-item {
       padding: 10px 0;
     }
@@ -130,6 +124,8 @@ body[id*='values']{
       padding-right: 20%;
       position: relative;
       z-index: 1;
+      margin-top: auto;
+      margin-bottom: auto;
     }
     .subtitle-small{
       margin-bottom: 20px;
@@ -138,6 +134,20 @@ body[id*='values']{
         background: linear-gradient(90deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
         opacity: 1;
         z-index: 0;
+    }
+  }
+  @include to(575px){
+    .slide {
+      height: 35px;
+    }
+    &__number {
+      font-size: 24px;
+      line-height: 100%;
+      z-index: 1;
+    }
+    .active &__number {
+      font-size: 48px;
+      line-height: 100%;
     }
   }
 }
