--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -10,6 +10,10 @@ body {
         margin-top: 30px;
         margin-bottom: 20px;
     }
+    @include to(768px){
+      max-width:100vw;
+      overflow:hidden;
+    }
 }
 
 .page-title {
