--- a/src/assets/styles/pages/home-dron.scss
+++ b/src/assets/styles/pages/home-dron.scss
@@ -62,6 +62,8 @@ body[id*="index"] {
   [data-prev] {
     padding: 0;
     border: none;
+    width: 50px;
+    height: 50px;
   }
   &__text-decor{
     position: absolute;
@@ -143,6 +145,34 @@ body[id*="index"] {
       top: 0;
     }
   }
+  @include to(575px){
+    &__slider-wrap {
+      height: 50vh;
+    }
+    &__text-wrap {
+      height: 50vh;
+      background: url(../images/home/ms-bg-mob-left.svg), url(../images/home/ms-bg-mob-right.svg);
+      background-repeat: repeat-y;
+      background-position: top left, top right;
+      .subtitle {
+        font-size: 16px;
+      }
+      padding-left: 65px;
+      padding-right: 65px;
+    }
+    &__text-decor {
+      display: none;
+    }
+    [data-next],
+    [data-prev] {
+      width: 36px;
+      height: 36px;
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
 
 .colorfull-block {
@@ -190,9 +220,24 @@ body[id*="index"] {
       white-space: nowrap;
     }
   }
+  @include to(575px){
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-left: 14px;
+    font-size: 30px;
+    &:before,
+    &:after {
+      width: calc(100vw - 28px);
+    }
+    &:before {
+      margin-bottom: 25px;
+    }
+    &:after {
+      margin-top: 25px;
+    }
+  }
 }
 .home-section-live {
-  
   @include from(1680px){
     min-height: 150vh;
   }
@@ -242,6 +287,14 @@ body[id*="index"] {
       width: calc(50% - 70px);
       margin-right: 70px;
     }
+  }
+  @include to(575px){
+    min-height: 150vh;
+    padding-bottom: 50vh;
+    background-position: bottom;
+    background-size: 100vw;
+    min-height: 150vh;
+    background-color: #2d4e83;
   }
 }
 .home-section-work  {
