--- a/src/assets/styles/pages/home-dron.scss
+++ b/src/assets/styles/pages/home-dron.scss
@@ -81,6 +81,15 @@ body[id*="index"] {
     min-width: 100vw;
   }
   @include from(1680px){
+    [data-next],
+    [data-prev] {
+      width: 70px;
+      height: 70px;
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
     .ms-logo {
       width: 105px;
       height: 178px;
@@ -240,6 +249,7 @@ body[id*="index"] {
 .home-section-live {
   @include from(1680px){
     min-height: 150vh;
+    min-height: 170vh;
   }
   @include to(950px){
     padding-left: var(--page-side-fields);
@@ -474,7 +484,7 @@ body[id*="index"] {
 }
 .home-section-appartments {
   min-height: calc(100vh - var(--header-h));
-  min-height: calc(100vh - var(--header-h));
+  margin-bottom: 0;
   &__subtitle {
     font-weight: normal;
     font-size: 18px;
@@ -496,6 +506,11 @@ body[id*="index"] {
   }
   .title {
     margin-bottom: 30px;
+  }
+  @include from(1680px){
+    &>* {
+      max-width:400px;
+    }
   }
   @include to(768px){
     margin-bottom: 0;
@@ -577,6 +592,23 @@ body[id*="index"] {
     margin-right: calc(var(--side-padding) * -1);
     padding-left: var(--side-padding);
     padding-right: var(--side-padding);
+  }
+  @include from(1680px){
+    --side-padding: calc(100vw / 12 * 2);
+    padding-top: 170px;
+    .info-list-custom_2 {
+      &>*{
+        width: calc(50% - 120px);
+      }
+    }
+    .title_type_2{
+      max-width: calc(100% / 8 * 5);
+      margin-right: auto;
+      margin-bottom: 100px;
+    }
+    .accordeons-subtitle {
+      margin-top: 100px;
+    }
   }
   @include to(768px){
     --side-padding: 22px;
@@ -731,6 +763,26 @@ body[id*="index"] {
     /* or 20px */
     text-align: center;
     color: #646464;
+  }
+  @include from(1680px){
+    max-width: calc(20% + 400px);
+    margin: 0 auto;
+    &__title {
+      font-size: 36px;
+      margin-bottom: 30px;
+      margin-top: 40px;
+    }
+    &__text {
+      font-size: 16px;
+    }
+    .logo-saga--size {
+        width: 160px;
+        height: 160px;
+    }
+    .home-section-developers .logo-perfect--size {
+        width: 300px;
+        height: 150px;
+    }
   }
   @include from-to(576px, 768px){
     &:nth-child(even){
