--- a/src/assets/styles/pages/values.scss
+++ b/src/assets/styles/pages/values.scss
@@ -165,5 +165,13 @@ body[id*='values']{
       font-size: 48px;
       line-height: 100%;
     }
+    .title {
+      margin-bottom: 20px;
+    }
+    .subtitle-small {
+      line-height: 1em;
+      margin-bottom: 20px;
+      font-size: 14px;
+    }
   }
 }
