--- a/src/pug/components/map/map.scss
+++ b/src/pug/components/map/map.scss
@@ -41,6 +41,9 @@
     top: var(--self-vertical-padding);
     transform: translateX(-50%);
     z-index: 1;
+    @include to(575px){
+      font-size: 24px;
+    }
   }
   &__legend-title{
     position: relative;
@@ -164,7 +167,7 @@
       position: absolute;
       bottom: 0;
       left: 0;
-      width: 270px;
+      width: 230px;
     }
     &__legend-marker {
       padding-top: 8px;
@@ -182,11 +185,12 @@
         content: "";
         margin-left: auto;
         display: inline-block;
+
         width: 13px;
         height: 8px;
         background-image: url("data:image/svg+xml,%3Csvg width='13' height='8' viewBox='0 0 13 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.8 1.18921L6.39999 6.00012L0.99999 1.18921' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
         position: absolute;
-        right: 30px;
+        right: 20px;
         top: 50%;
         transform: translateY(-50%) rotate(0.5turn);
     }
@@ -198,7 +202,7 @@
         background-image: url("data:image/svg+xml,%3Csvg width='13' height='8' viewBox='0 0 13 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.8 1.18921L6.39999 6.00012L0.99999 1.18921' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
         margin-left: auto;
         position: absolute;
-        right: 30px;
+        right: 20px;
         top: 50%;
         transform: translateY(-50%);
     }
