home mobile adaptation

--- a/src/assets/styles/footer-dron.scss
+++ b/src/assets/styles/footer-dron.scss
@@ -10,6 +10,9 @@
     .footer-dev__text {
       margin-right: 0;
     }
+    .footer-dev__link {
+      margin-top: 2px;
+    }
     .underline::after {
       bottom: 0;
     }
