--- a/src/assets/styles/pages/home-dron.scss
+++ b/src/assets/styles/pages/home-dron.scss
@@ -303,7 +303,7 @@ body[id*="index"] {
     padding-bottom: 50vh;
     background-position: bottom;
     background-size: 100vw;
-    min-height: 150vh;
+    min-height: auto;
     background-color: #2d4e83;
     padding-top: 60px;
     margin-bottom: 0;
@@ -637,6 +637,28 @@ body[id*="index"] {
       margin-top: 30px;
     }
   }
+  @include to(575px){
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 60px;
+    min-height: 80vh;
+    .title {
+      margin-bottom: 20px;
+    }
+    &__subtitle {
+      font-size: 14px;
+      line-height: 1.7em;
+      &:before{
+        margin-bottom: 10px;
+      }
+      &:after {
+        margin-top: 10px;
+      }
+    }
+    .main-button {
+      margin-top: 20px;
+    }
+  }
 }
 
 .home-section-custom-2{
@@ -904,8 +926,36 @@ body[id*="index"] {
     }
   }
   @include to(575px){
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding:60px 14px;
+    .title {
+      margin-bottom: 20px;
+    }
+    .home-section-developers-list {
+      padding-bottom: 30px;
+      padding-top: 30px;
+      &>* {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+      }
+      &:after {
+        display: none;
+      }
+      &>*:nth-child(2):before{
+        content: '';
+        display: inline-block;
+        width: 100%;
+        height: 1px;
+        background-color: #E8E8E8;
+        margin-bottom: 10px;
+        margin-top: 30px;
+      }
+    }
+    
+    .logo-saga--size {
+        width: 130px;
+        height: 130px;
+    }
   }
 }
 .home-section-developers-item {
@@ -958,6 +1008,13 @@ body[id*="index"] {
     &:nth-child(odd){
       padding-right: 10%;
       padding-left: 0;
+    }
+  }
+  @include to(575px){
+    &__title {
+      font-size: 14px;
+      line-height: 1em;
+      margin-bottom: 10px;
     }
   }
 }
