--- a/src/pug/components/popup/popup.scss
+++ b/src/pug/components/popup/popup.scss
@@ -9,3 +9,53 @@
   visibility: hidden;
   z-index: 25;
 }
+
+.call-popup {
+  padding-top: var(--header-h);
+  background-color:#f9f9f970 ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  form {
+    padding: 80px 60px;
+    max-width: 520px;
+    position: relative;
+    z-index: 2;
+    background: #F9F9F9;
+  }
+  &__close {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    background: none;
+    border: none;
+    width: 17px;
+    height: 17px;
+    padding: 0;
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  legend {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 100%;
+    /* identical to box height, or 18px */
+
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    /* Brown */
+
+    color: #4D4D4C;
+  }
+  &__transparent-close {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    cursor: pointer;
+  }
+}
